Tue Nov  1 14:49:12 UTC 2005  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tests/Sequence_Unit_Tests/unbounded_value_sequence_ut.cpp:
          Added a regression for bug 2201

        * tests/Sequence_Unit_Tests/value_traits.hpp:
          Implement initialize_range and zero_range as fix for bug
          2201 which also seemed to exist in the new sequence implementation

Tue Nov  1 14:42:14 UTC 2005  Jeff Parsons <j.parsons@vanderbilt.edu>

        * TAO_IDL/be/be_visitor_valuetype/valuetype_obv_cs.cpp:

          Fixed bug in generation of constructor initializing member
          values that failed to screen out attributes when traversing
          the valuetype's scope for stub source file generation.

Tue Nov  1 14:14:31 UTC 2005  Jeff Parsons <j.parsons@vanderbilt.edu>

        * tao/Managed_Types.h:
        * tao/Managed_Types.i:

          Added constructors for TAO_String_Manager and
          TAO_WString_Manager from const char* and const CORBA::WChar*
          respectively (each constructor makes a copy). These new
          constructors are used in generated code for valuetypes, in
          the initializing constructor added in

          Fri Oct 28 23:55:14 UTC 2005  Jeff Parsons <j.parsons@vanderbilt.edu>

Tue Nov  1 12:33:12 UTC 2005  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tests/Bug_2074_Regression/*:
        * orbsvcs/tests/Bug_2074_Regression/*:
          Moved test to orbsvs

Tue Nov  1 11:47:12 UTC 2005  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tests/Sequence_Unit_Tests/generic_sequence.hpp:
          Fixed typo

Tue Nov  1 10:19:12 UTC 2005  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tests/File_IO/File_i.cpp:
          64bit fix

Tue Nov  1 10:11:12 UTC 2005  Johnny Willemsen  <jwillemsen@remedy.nl>

        * performance-tests/CSD_Strategy/TestInf/ClientTask.cpp:
        * tests/CSD_Strategy_Tests/TP_Common/ClientTask.cpp:
          Fixed 64bit conversion warnings
